erDiagram
    USER ||--o{ BOOKING : "places"
    USER ||--o{ TRIP_GUIDE_ASSIGNMENT : "guides"
    TRIP ||--o{ TRIP_GUIDE_ASSIGNMENT : "staffed by"
    TRIP ||--o{ BOOKING : "receives"
    BOOKING ||--o| RENTAL : "fulfilled by"
    RENTAL ||--|{ RENTAL_ITEM : "contains"
    DEVICE ||--o{ RENTAL_ITEM : "rented as"
    DEVICE ||--o{ GATEWAY_EVENT : "emits"
    DEVICE ||--o{ INCIDENT : "raises"
    GATEWAY_EVENT |o--o| INCIDENT : "opens"
    TRIP ||--o{ INCIDENT : "context of"
    RENTAL ||--o{ INVOICE : "billed by"
